<?xml version="1.0"?>
<package>
    <name>autoware_tracker</name>
    <version>1.0.0</version>
    <description>The autoware tracker package</description>
    <maintainer email="lalala@lalala.lalala">Tixiao Shan</maintainer>
    <license>Apache 2</license>

    <buildtool_depend>catkin</buildtool_depend>






    <!-- <depend>std_msgs</depend> -->
    <!-- <depend>sensor_msgs</depend> -->
    <!-- <depend>geometry_msgs</depend> -->
    <build_depend>jsk_recognition_msgs</build_depend>
    <run_depend>jsk_recognition_msgs</run_depend>


    <build_depend>pcl_ros</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>


    <run_depend>pcl_ros</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>visualization_msgs</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>image_transport</run_depend>

    <!-- <build_depend>grid_map_ros</build_depend> -->
    <!-- <build_depend>grid_map_cv</build_depend> -->
    <!-- <build_depend>grid_map_msgs</build_depend> -->
    <build_depend>jsk_rviz_plugins</build_depend>
    <!-- <run_depend>grid_map_ros</run_depend> -->
    <!-- <run_depend>grid_map_cv</run_depend> -->
    <!-- <run_depend>grid_map_msgs</run_depend> -->
    <run_depend>jsk_rviz_plugins</run_depend>


    <build_depend>message_generation</build_depend>
    <run_depend>message_generation</run_depend>
    <build_depend>message_runtime</build_depend>
    <run_depend>message_runtime</run_depend>









</package>
